# pchome-buyer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schedule.sh
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pyproject.toml
backend/src/pchome/: __init__.py
backend/src/pchome/api/: __init__.py  deps.py
backend/src/pchome/api/routers/: checkouts.py  settings.py
backend/src/pchome/core/: __init__.py  cancel.py  cart.py  checkout.py  config.py  membership.py  monitor.py  product_info.py  reporter.py  runner.py
backend/src/pchome/repositories/: auth_state_repository.py
backend/src/pchome/services/: product_id.py
backend/tests/: conftest.py  test_api_auth.py  test_membership.py
backend/tests/integration/: conftest.py  test_api_checkouts.py  test_api_settings.py
backend/tests/unit/: test_auth_state_repository.py  test_checkout_repository.py  test_event_bus.py  test_product_info.py  test_product_repository.py  test_timing.py
docs/claude/: 00-diagnosis.md  10-model-dispatch.md  20-judgment-rubrics.md  30-delegation-templates.md  40-maintenance.md  50-letter.md  architecture.md
e2e/: conftest.py  test_panel_ui.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  colors.test.ts  colors.ts  main.tsx  state.test.tsx  state.tsx  styles.css  test-setup.ts  toast.test.tsx  toast.tsx  types.ts
pchome/: cart.py  checkout.py  cli.py  config.py  monitor.py  reporter.py  runner.py  session.py
pchome/api/: app.py  deps.py
pchome/core/: cart.py  checkout.py  config.py  jsapi.py  monitor.py  product_info.py  reporter.py  runner.py  session.py  timing.py
pchome/infra/: mongo.py
pchome/repositories/: checkout_repository.py  (+2 more)
tests/: conftest.py  test_api_auth.py  test_api_checkouts.py  test_api_events.py  test_api_jobs.py  test_api_products.py  test_auth_service.py  test_cancel.py  test_cart.py  test_checkout.py  test_checkout_store.py  test_cli_helpers.py  test_config.py  test_event_bus.py  test_job_service.py  test_monitor.py  test_product_id.py  test_product_info.py  test_product_store.py  test_runner.py  test_session.py  test_settings_repository.py  test_settings_store.py  test_timing.py
(+48 files in other folders)
