[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pchome-buyer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "playwright>=1.40.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
pchome = "pchome.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "import-linter>=2.13",
    "mongomock>=4.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/pchome"]

[tool.importlinter]
root_package = "pchome"

# pchome.repositories 與 pchome.infra 刻意不列入這份 contract（分層只要求 api/services/core 三層）
[[tool.importlinter.contracts]]
name = "Layered architecture (api > services > core)"
type = "layers"
layers = [
    "pchome.api",
    "pchome.services",
    "pchome.core",
]
